@@ -1012,14 +1012,17 @@ compactPDF <-
     structure(na.omit(ans), class = c("compactPDF", "data.frame"))
 }
 
-find_gs_cmd <- function(gs_cmd)
+find_gs_cmd <- function(gs_cmd = "")
 {
     if(!nzchar(gs_cmd)) {
         if(.Platform$OS.type == "windows") {
-            gs_cmd <- Sys.which("gswin64c")
+            gsexe <- Sys.getenv("R_GSCMD")
+            if (!nzchar(gsexe)) gsexe <- Sys.getenv("GSC")
+            gs_cmd <- Sys.which(gsexe)
+            if (!nzchar(gs_cmd)) gs_cmd <- Sys.which("gswin64c")
             if (!nzchar(gs_cmd)) gs_cmd <- Sys.which("gswin32c")
             gs_cmd
-        } else Sys.which("gs")
+        } else Sys.which(Sys.getenv("R_GSCMD", "gs"))
     } else Sys.which(gs_cmd)
 }
 
